[package]
authors = ["Apollo Developers <opensource@apollographql.com>"]
categories = ["command-line-interface"]
description = """
Rover is a tool for working with the Apollo GraphQL Registry.
"""
documentation = "https://go.apollo.dev/r/docs"
edition = "2024"
keywords = ["graphql", "cli", "apollo", "graph", "registry"]
license-file = "./LICENSE"
name = "rover"
readme = "README.md"
repository = "https://github.com/apollographql/rover/"
version = "0.37.2"
default-run = "rover"

publish = false

[[bin]]
name = "rover"
path = "src/bin/rover.rs"

[[test]]
name = "e2e"
path = "tests/test_e2e.rs"

[workspace]
members = [
    ".",
    "xtask",
    "crates/houston",
    "crates/robot-panic",
    "crates/rover-tower",
    "crates/rover-http",
    "crates/rover-graphql",
    "crates/rover-studio",
    "crates/sputnik",
    "crates/timber",
    "installers/binstall",
    "regressions"
]

[workspace.lints.clippy]
all = "deny"
or_fun_call = "deny"
redundant_clone = "deny"
missing_const_for_fn = "deny"
needless_collect = "deny"

[lints]
workspace = true

[features]
default = ["composition-js"]

# this feature exists to enable composition
# notably, it is disabled for x86_64-unknown-linux-musl builds
# because of this GitHub issue: https://github.com/denoland/deno/issues/3711
composition-js = []

### cross-workspace dependencies
# these dependencies can be used by any other workspace crate by specifying the dependency like so:
# my-dependency = { workspace = true }
[workspace.dependencies]
# path dependencies
binstall = { path = "./installers/binstall" }
houston = { path = "./crates/houston" }
robot-panic = { path = "./crates/robot-panic" }
rover-client = { path = "./crates/rover-client" }
rover-http = { path = "./crates/rover-http" }
rover-graphql = { path = "./crates/rover-graphql" }
rover-std = { path = "./crates/rover-std" }
rover-studio = { path = "./crates/rover-studio" }
rover-tower = { path = "./crates/rover-tower" }
sputnik = { path = "./crates/sputnik" }
timber = { path = "./crates/timber" }

# apollo maintained dependencies

# https://github.com/apollographql/apollo-rs
apollo-parser = "0.8"
apollo-encoder = "0.8"

# https://github.com/apollographql/federation-rs
apollo-federation-types = { version = "0.17.0", features = ["json_schema"] }

apollo-language-server = { version = "0.5.0", default-features = false, features = ["tokio"] }

# crates.io dependencies
anyhow = "1"
ariadne = "0.6"
assert_fs = "1"
assert_cmd = "2"
assert-json-diff = "2"
async-trait = "0.1"
backtrace = "0.3"
backon = { version = "1.4", features = ["std", "tokio-sleep"] }
base64 = "0.22"
billboard = "0.2"
bon = "3.8.2"
buildstructor = "0.6"
bytes = "1"
cargo_metadata = "0.23"
calm_io = "0.1"
camino = { version = "1", features = ["serde1"] }
clap = "4"
clap_complete = "4"
chrono = "0.4"
ci_info = "0.14"
comfy-table = { version = "7", features = ["custom_styling"] }
console = "0.16"
derive-getters = "0.5"
dialoguer = { version = "0.12", features = ["fuzzy-select"] }
directories-next = "2"
dotenvy = "0.15"
flate2 = "1"
futures = "0.3"
git-url-parse = "0.6"
git2 = { version = "0.20", default-features = false }
graphql_client = "0.15"
heck = "0.5"
humantime = "2"
http = "1"
http-body = "1"
http-body-util = "0.1"
httpmock = "0.8"
hyper = "1"
indoc = "2"
itertools = "0.14"
lazycell = "1"
lazy_static = "1"
mockall = "0.11.1"
notify = "8"
opener = "0.8"
os_info = "3"
os_type = "2"
pastey = "0.2.1"
predicates = "3"
pretty_assertions = "1"
rand = "0.9"
regex = "1"
reqwest = { version = "0.12", default-features = false }
rstest = "0.26"
schemars = "1"
sealed_test = "1.1.0"
semver = "1"
serial_test = "3"
serde = "1"
serde_json = "1"
serde_with = { version = "3", default-features = false, features = ["macros"] }
serde_yaml = "0.9"
shell-candy = "0.4"
speculoos = "0.13"
strip-ansi-escapes = "0.2"
strsim = "0.11"
strum = "0.27"
strum_macros = "0.27"
sha2 = "0.10"
shellexpand = "3"
termcolor = "1"
thiserror = "2"
tap = "1"
tar = "0.4"
termimad = "0.34"
tempfile = "3"
tokio = { version = "1", features = ["signal", "io-std"] }
tokio-stream = "0.1"
tokio-test = "0.4"
tokio-util = "0.7"
toml = "0.9"
tower = { version = "0.5.3", features = ["make", "retry", "timeout"] }
tower-http = "0.6.8"
tower-test = "0.4"
tracing = "0.1"
tracing-core = "0.1"
tracing-subscriber = "0.3"
tracing-test = "0.2"
which = "8"
wsl = "0.1"
uuid = "1"
url = "2"
zip = "7"

### rover specific dependencies
[dependencies]
anyhow = { workspace = true }
assert_fs = { workspace = true }
async-trait = { workspace = true }
apollo-language-server = { workspace = true }
apollo-federation-types = { workspace = true }
apollo-parser = { workspace = true }
billboard = { workspace = true }
binstall = { workspace = true }
buildstructor = { workspace = true }
calm_io = { workspace = true }
camino = { workspace = true }
clap = { workspace = true, features = ["color", "derive", "env"] }
clap_complete = { workspace = true }
chrono = { workspace = true }
console = { workspace = true }
derive-getters = { workspace = true }
dialoguer = { workspace = true }
dotenvy = { workspace = true }
flate2 = { workspace = true }
futures = { workspace = true }
graphql_client = { workspace = true }
heck = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
houston = { workspace = true }
itertools = { workspace = true }
lazycell = { workspace = true }
lazy_static = { workspace = true }
opener = { workspace = true }
os_info = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
robot-panic = { workspace = true }
rover-client = { workspace = true }
rover-graphql = { workspace = true }
rover-http = { workspace = true }
rover-std = { workspace = true }
rover-studio = { workspace = true }
schemars = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
serde_yaml = { workspace = true }
shellexpand = { workspace = true }
sputnik = { workspace = true }
strsim = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
tap = { workspace = true }
tar = { workspace = true }
tempfile = { workspace = true }
timber = { workspace = true }
termimad = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "process", "sync"] }
tokio-stream = { workspace = true, features = ["sync"] }
tokio-util = { workspace = true }
toml = { workspace = true }
tower = { workspace = true }
tower-lsp = { version = "0.20" }
tracing = { workspace = true }
uuid = { workspace = true }
url = { workspace = true, features = ["serde"] }
comfy-table = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
assert-json-diff = { workspace = true }
dircpy = "0.3"
duct = "1"
git2 = { workspace = true }
graphql-schema-diff = "0.2"
httpmock = { workspace = true }
indoc = { workspace = true }
json-matcher = "0.1"
jsonschema = "0.40"
mime = "0.3"
mockall = "0.14"
portpicker = "0.1"
predicates = { workspace = true }
rand_regex = "0.18"
reqwest = { workspace = true, features = ["rustls-tls-native-roots"] }
rstest = { workspace = true }
sealed_test = { workspace = true }
serial_test = { workspace = true }
speculoos = { workspace = true }
subgraph-mock = "0.1"
tower-test = { workspace = true }
tracing-test = { workspace = true }
temp-env = { version = "0.3", features = ["async_closure"] }
which = { workspace = true }

# For sputnik, run tests with debug_assertions disabled. This is necessary because telemetry is not sent if
# debug_assertions is enabled, and the tests rely on telemetry being sent to mock APIs.
[profile.test.package.sputnik]
debug-assertions = false
