[package]
name = "xtask"
version = "0.1.0"
authors = ["Apollo Developers <opensource@apollographql.com>"]
edition = "2021"

publish = false

[dependencies]
anyhow = { workspace = true }
apollo-federation-types = { workspace = true }
assert_fs = { workspace = true }
base64 = { workspace = true }
buildstructor = { workspace = true }
camino = { workspace = true }
cargo_metadata = { workspace = true }
clap = { workspace = true, features = ["color", "derive", "env"] }
console = { workspace = true }
flate2 = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
lazy_static = { workspace = true }
octocrab = "0.41.0"
regex = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "native-tls", "json"] }
rover-client = { workspace = true }
rover-std = { workspace = true }
semver = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_json_traversal = { workspace = true }
serde_yaml = { workspace = true }
shell-candy = { workspace = true }
tar = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
tokio-stream = { workspace = true }
url = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
which = { workspace = true }
zip = { workspace = true }

[target.'cfg(not(windows))'.dependencies]
lychee-lib = { version = "0.16", features = ["vendored-openssl"] }

[dev-dependencies]
mockito = "1.5.0"
rstest = { workspace = true }
speculoos = { workspace = true }
