[package]
name = "xtask"
version = "0.1.0"
authors = ["Apollo Developers <opensource@apollographql.com>"]
edition = "2021"

publish = false

[dependencies]
assert_fs = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
camino = { workspace = true }
cargo_metadata = { workspace = true }
clap = { workspace = true, features = ["color", "derive", "env"] }
console = { workspace = true }
http = { workspace = true }
flate2 = { workspace = true }
lazy_static = { workspace = true }
rover-std = { workspace = true }
rover-client = { workspace = true }
serde_json = { workspace = true }
tar = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "rustls-no-provider", "json"] }
rustls = { workspace = true }
semver = { workspace = true }
serde = { workspace = true, features = ["derive"] }
shell-candy = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
tokio-stream = { workspace = true }
which = { workspace = true }
zip = { workspace = true }

[lints]
workspace = true
