[package]
name = "apollo-federation-types"
version = "0.1.0"
edition = "2021"
authors = ["Apollo Developers <opensource@apollographql.com>"]
description = """
apollo-federation-types contains types used by plugins for the Rover CLI
"""
license = "MIT"
readme = "README.md"
repository = "https://github.com/apollographql/rover/"

[dependencies]
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1"