[package]
name = "apollo-supergraph-config"
version = "0.1.0"
authors = ["Apollo Developers <opensource@apollographql.com>"]
edition = "2021"
license ="MIT"
description = """
apollo-supergraph-config contains code for parsing the supergraph configuration YAML needed by Apollo's Rover CLI
"""
readme = "README.md"
repository = "https://github.com/apollographql/rover/"

[dependencies]
camino = { version = "1", features = [ "serde1" ] }
apollo-federation-types = "0.1"
log = "0.4"
serde = "1"
serde_yaml = "0.8"
thiserror = "1"
url = { version = "2", features = [ "serde" ] }

[dev-dependencies]
assert_fs = "1"