[package]
name = "houston"
version = "0.0.0"
authors = ["Apollo Developers <opensource@apollographql.com>"]
edition = "2021"

publish = false

[dependencies]
directories-next = "2.0"
saucer = { git = "https://github.com/EverlastingBugstopper/awc.git", rev = "fd8df605e39fdbdf4985f255a7390afccc2600cd" }
# saucer = { path = "../../../awc/saucer" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
toml = "0.5"
tracing = "0.1"

[dev-dependencies]
assert_fs = "1"
