[package]
name = "launchpad"
version = "0.1.0"
edition = "2021"

[dependencies]
apollo-encoder = "0.3.1"
backoff = "0.4"
graphql_client = "0.11.0"
humantime = "2.1.0"
hyper = "0.14"
reqwest = { version = "0.11", default-features = false, features = [
    "blocking",
    "json",
] }
semver = "1"
serde = "1"
serde_json = "1"
thiserror = "1"
tracing = "0.1"

[dev-dependencies]
indoc = "1.0"
httpmock = "0.6"
pretty_assertions = "1.2"
