[package]
name = "robot-panic"
version = "1.0.3"
edition = "2021"

publish = false

[dependencies]
backtrace = "0.3"
os_type = "2.4"
saucer = { git = "https://github.com/EverlastingBugstopper/awc.git", rev = "fd8df605e39fdbdf4985f255a7390afccc2600cd" }
# saucer = { path = "../../../awc/saucer" }
serde = "1.0"
termcolor = "1.1"
toml = "0.5"
uuid = { version = "1", features = ["v4"], default-features = false }
url = "2.2"
