[package]
name = "robot-panic"
version = "1.0.3"
edition = "2021"

publish = false

[dependencies]
backtrace = { workspace = true }
os_type = { workspace = true }
saucer = { workspace = true }
serde = { workspace = true }
termcolor = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true, features = ["v4"], default-features = false }
url = { workspace = true}

