[package]
name = "robot-panic"
version = "1.0.3"
edition = "2021"

publish = false

[dependencies]
backtrace = { workspace = true }
camino = { workspace = true }
os_type = { workspace = true }
rover-std = { workspace = true }
serde = { workspace = true }
termcolor = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
url = { workspace = true}

[lints]
workspace = true

