[package]
authors = ["Apollo Developers <opensource@apollographql.com>"]
description = "an http client for making graphql requests for the rover CLI"
edition = "2021"
name = "rover-client"
version = "0.0.0"

publish = false

[dependencies]
ariadne = { workspace = true }
apollo-federation-types = { workspace = true }
apollo-parser = { workspace = true }
apollo-encoder = { workspace = true }
backoff = { workspace = true, features = ["tokio", "futures"] }
buildstructor = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
derive-getters = { workspace = true }
git-url-parse = { workspace = true }
git2 = { workspace = true, features = [
    "vendored-openssl",
] }
graphql_client = { workspace = true }
houston = { workspace = true }
humantime = { workspace = true }
hyper = { workspace = true }
itertools = { workspace = true }
prettytable-rs = { workspace = true }
reqwest = { workspace = true, features = [
    "blocking",
    "brotli",
    "gzip",
    "json",
    "native-tls-vendored",
    "socks",
] }
rover-graphql = { workspace = true }
rover-http = { workspace = true }
rover-std = { workspace = true }
rover-studio = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
url = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
camino = { workspace = true }
rover-std = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true, features = [
    "json",
    "blocking",
    "native-tls-vendored",
] }

[dev-dependencies]
indoc = { workspace = true}
httpmock = { workspace = true }
pretty_assertions = { workspace = true }
rstest = { workspace = true }
speculoos = { workspace = true }
strip-ansi-escapes = { workspace = true }
tower-test = { workspace = true }
tokio-test = { workspace = true }
