[package]
name = "rover-fed"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
camino = "1"
harmonizer = { git = "https://github.com/EverlastingBugstopper/federation", branch = "avery/harmonizer-cli" }
structopt = "0.3"
supergraph-config = { git = "https://github.com/apollographql/rover", rev = "acb560a9b6ee142d08f87e37443be8ad6e158e7c" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"