[package]
name = "rover-fed"
version = "0.1.0"
edition = "2021"

publish = false

[dependencies]
anyhow = "1"
camino = "1"
harmonizer = { git = "https://github.com/apollographql/federation", branch = "main" }
structopt = "0.3"
apollo-supergraph-config = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"